[package]
name = "contour_rust_pdk"
version = "0.0.1"
edition = "2024"

[workspace]
members = ["macros"]

[dependencies]
anyhow = "1.0.75"
contour_rust_pdk_macros = { path = "./macros" }
chrono = { version = "0.4.31", features = [
    "serde",
    "alloc",
], default-features = false }
chrono-tz = { version = "0.10.0", features = ["serde"] }
csv-core = "0.1.12"
extism-pdk = "1.4.0"
rust_decimal = { version = "1.33.1" }
rust_decimal_macros = { version = "1.33.1" }
serde = "1.0.193"
serde_json = "1.0.138"
uuid = { version = "1.13.2", default-features = false, features = ["serde"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
mockall = "0.13.1"
