[package]
name = "contour_rust_plugin_sdk"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
contour_interface = { git = "https://github.com/contourapp/contour-interface" }
contour_macros = { path = "../macros" }
chrono = { version = "0.4.31", features = [
    "serde",
    "alloc",
], default-features = false }
csv-core = "0.1.11"
extism-pdk = "1.0.0-rc1"
rust_decimal = { version = "1.33.1" }
rust_decimal_macros = { version = "1.33.1" }
serde = "1.0.193"
serde_json = "1.0.108"
uuid = { version = "1.6.1", default-features = false, features = ["serde"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
mockall = "0.12.1"
